// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcIcon should allow to use any sprite url 1`] = `
<svg
  class="ec-icon"
>
  <use
    href="/custom/sprite.svg#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should allow to use icon from inline sprite 1`] = `
<svg
  class="ec-icon"
>
  <use
    href="#ec-random-icon"
  />
</svg>
`;

exports[`EcIcon should render properly when a name was given 1`] = `
<svg
  class="ec-icon"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the given size prop 1`] = `
<svg
  class="ec-icon"
  height="16"
  width="16"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the icon from the sprite "currency" 1`] = `
<svg
  class="ec-icon"
>
  <use
    href="/img/currency-flags.svg#ec-currency-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the icon from the sprite "rounded" 1`] = `
<svg
  class="ec-icon"
>
  <use
    href="/img/rounded-icons.svg#ec-rounded-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the icon from the sprite "simple" 1`] = `
<svg
  class="ec-icon"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "error" 1`] = `
<svg
  class="ec-icon ec-icon--error"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "info" 1`] = `
<svg
  class="ec-icon ec-icon--info"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "success" 1`] = `
<svg
  class="ec-icon ec-icon--success"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;

exports[`EcIcon should use the type "warning" 1`] = `
<svg
  class="ec-icon ec-icon--warning"
>
  <use
    href="/img/simple-icons.svg#ec-simple-random-icon"
  />
</svg>
`;
